add test for present of trips for late night services